# gdownloader

./: README.md  Recipe  configure.ac
src/: Makefile.am  Recipe  config.vala.template  gd-application.vala  gd-core-plugin-engine.vala  gd-dirs.vala  gd-download-queue.vala  gd-hoster-plugin-engine.vala  gd-new-download-dialog.vala  gd-plugin-engine.vala  gd-preferences-window.vala  gd-preferences.vala  gd-utils.vala  gd-window.vala  gdownloader.gresources.xml  gdownloader.vala  main.vala  menus.ui  new-download.ui  preferences.ui  window.ui
vapi/: config.vapi
